DHFPROD-6646: Reverting DHF to Java 8
Code changes are mostly changing how @Deprecated is used and not using some collections APIs that were added in Java 9 (but are easily replaced).